[package]
name = "pj"
version = "0.2.0"
authors = ["Trent"]
edition = "2018"
description = "Utility for quickly displaying package.json information."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"
structopt = "0.3"

[profile.release]
incremental = false
lto = true
codegen-units = 1